





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_NonLeafAttribute extends FromAttributeOwner, FromAttribute {




    public uml2rdbms_NonLeafAttribute(
    ) {
        super(
        );
    }




}