





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_PrimitiveDataType  {






    private uml2rdbms_PrimitiveToName uml2rdbms_primitivetoname;


    public uml2rdbms_PrimitiveDataType(
    ) {
    }



    public uml2rdbms_PrimitiveToName getUml2rdbms_primitivetoname() {
        return uml2rdbms_primitivetoname;
    }

    public void setUml2rdbms_primitivetoname(uml2rdbms_PrimitiveToName uml2rdbms_primitivetoname) {
        this.uml2rdbms_primitivetoname = uml2rdbms_primitivetoname;
    }

}