





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_ToColumn  {




    public uml2rdbms_ToColumn(
    ) {
    }




}