





import java.util.List;
import java.util.ArrayList;

public class FromAttributeOwner  {




    public FromAttributeOwner(
    ) {
    }




}