





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_ForeignKey  {






    private uml2rdbms_AssociationToForeignKey uml2rdbms_associationtoforeignkey;


    public uml2rdbms_ForeignKey(
    ) {
    }



    public uml2rdbms_AssociationToForeignKey getUml2rdbms_associationtoforeignkey() {
        return uml2rdbms_associationtoforeignkey;
    }

    public void setUml2rdbms_associationtoforeignkey(uml2rdbms_AssociationToForeignKey uml2rdbms_associationtoforeignkey) {
        this.uml2rdbms_associationtoforeignkey = uml2rdbms_associationtoforeignkey;
    }

}