





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_Table  {






    private uml2rdbms_ClassToTable uml2rdbms_classtotable;


    public uml2rdbms_Table(
    ) {
    }



    public uml2rdbms_ClassToTable getUml2rdbms_classtotable() {
        return uml2rdbms_classtotable;
    }

    public void setUml2rdbms_classtotable(uml2rdbms_ClassToTable uml2rdbms_classtotable) {
        this.uml2rdbms_classtotable = uml2rdbms_classtotable;
    }

}