





import java.util.List;
import java.util.ArrayList;

public class UmlToRdbmsModelElement  {




    public UmlToRdbmsModelElement(
    ) {
    }




}