





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_Attribute  {






    private uml2rdbms_FromAttribute uml2rdbms_fromattribute;


    public uml2rdbms_Attribute(
    ) {
    }



    public uml2rdbms_FromAttribute getUml2rdbms_fromattribute() {
        return uml2rdbms_fromattribute;
    }

    public void setUml2rdbms_fromattribute(uml2rdbms_FromAttribute uml2rdbms_fromattribute) {
        this.uml2rdbms_fromattribute = uml2rdbms_fromattribute;
    }

}