





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_AttributeToColumn extends ToColumn, FromAttribute {




    public uml2rdbms_AttributeToColumn(
    ) {
        super(
        );
    }




}