





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_BooleanToBoolean extends PrimitiveToName {




    public uml2rdbms_BooleanToBoolean(
    ) {
        super(
        );
    }




}