





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_Column  {






    private uml2rdbms_ToColumn uml2rdbms_tocolumn;


    public uml2rdbms_Column(
    ) {
    }



    public uml2rdbms_ToColumn getUml2rdbms_tocolumn() {
        return uml2rdbms_tocolumn;
    }

    public void setUml2rdbms_tocolumn(uml2rdbms_ToColumn uml2rdbms_tocolumn) {
        this.uml2rdbms_tocolumn = uml2rdbms_tocolumn;
    }

}