





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_IntegerToNumber extends PrimitiveToName {




    public uml2rdbms_IntegerToNumber(
    ) {
        super(
        );
    }




}