





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_Schema  {






    private uml2rdbms_PackageToSchema uml2rdbms_packagetoschema;


    public uml2rdbms_Schema(
    ) {
    }



    public uml2rdbms_PackageToSchema getUml2rdbms_packagetoschema() {
        return uml2rdbms_packagetoschema;
    }

    public void setUml2rdbms_packagetoschema(uml2rdbms_PackageToSchema uml2rdbms_packagetoschema) {
        this.uml2rdbms_packagetoschema = uml2rdbms_packagetoschema;
    }

}