





import java.util.List;
import java.util.ArrayList;

public class uml2rdbms_StringToVarchar extends PrimitiveToName {




    public uml2rdbms_StringToVarchar(
    ) {
        super(
        );
    }




}